// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Content with one column 1`] = `
<div
  className="Container secondary"
  id=""
>
  <div
    className="content"
  >
    <h3
      className="title"
    >
      Section Content Title
    </h3>
    <div
      className="columnsContainer"
    >
      <div>
        <p>
          Some content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content with three columns 1`] = `
<div
  className="Container secondary"
  id=""
>
  <div
    className="content"
  >
    <h3
      className="title"
    >
      Section Content Title
    </h3>
    <div
      className="columnsContainer"
    >
      <div>
        <p>
          Some content
        </p>
      </div>
      <div>
        <p>
          Some more content
        </p>
      </div>
      <div>
        <p>
          Even mooooore content.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Content with two columns 1`] = `
<div
  className="Container secondary"
  id=""
>
  <div
    className="content"
  >
    <h3
      className="title"
    >
      Section Content Title
    </h3>
    <div
      className="columnsContainer"
    >
      <div>
        <p>
          Some content
        </p>
      </div>
      <div>
        <p>
          Some more content
        </p>
      </div>
    </div>
  </div>
</div>
`;
